--- a/app/src/main/res/layout/recycler_item_forecast.xml
+++ b/app/src/main/res/layout/recycler_item_forecast.xml
@@ -13,13 +13,14 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
+        android:id="@+id/parent"
         android:orientation="vertical"
         android:paddingBottom="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/lightgray"
+            android:background="#E1F5FE"
             android:orientation="horizontal"
             android:paddingLeft="13dp"
             android:paddingTop="5dp"
@@ -59,6 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Banker:  "
+                android:textStyle="bold"
                 android:textColor="@android:color/black" />
 
             <TextView
@@ -82,6 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2Sure:  "
+                android:textStyle="bold"
                 android:textColor="@android:color/black" />
 
             <TextView
@@ -120,6 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Best 5:  "
+                android:textStyle="bold"
                 android:textColor="@android:color/black" />
 
             <TextView
